@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-19T01:00:15Z",
+  "timestamp" : "2022-06-19T08:13:20Z",
   "count_outdated" : 343,
   "uniques_outdated" : 184,
-  "count" : 372,
-  "uniques" : 201,
+  "count" : 373,
+  "uniques" : 202,
   "clones" : [
     {
       "timestamp": "2022-06-05T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
