@@ -1,3 +1,10 @@
+2022-06-19T08:13:20Z:
+* notice: last 14d: unq all: 4 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 184 343 / 201 372
+* notice: next accum: outdated-unq outdated-all / unq all: 184 343 / 202 373
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-19]
+
 2022-06-19T01:00:15Z:
 * notice: last 14d: unq all: 4 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 183 341 / 201 370
